Address some sonarcloud findings